# skillgraph-tutor

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  skillgraph.toml
.github/workflows/: ci.yml
data/: sample_quiz_bank.json  sample_syllabus.md
examples/: demo_run.sh
src/pydantic/: __init__.py
src/skillgraph_tutor/: __init__.py  cli.py  compat.py  config.py  eval_harness.py  graph.py  logging_utils.py  planner.py  reporting.py  scheduler.py  student.py  tutors.py
src/typer/: __init__.py  testing.py
tests/: test_cli.py  test_graph.py  test_planner.py  test_reporting.py  test_scheduler.py  test_student_model.py
