[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgraph-tutor"
version = "0.1.0"
description = "Offline-first agentic tutoring engine with concept graphs, mastery tracking, planning, and Socratic tutoring."
readme = "README.md"
authors = [{name = "SkillGraph Tutor Contributors"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
skillgraph = "skillgraph_tutor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
